[tool.poetry]
name = "cards"
version = "0.1.0"
description = ""
authors = ["bezgin sasha <bezgin.sasha06@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Flask = "^2.0.1"
pymongo = "^3.11.4"
pyhumps = "^3.0.2"
loguru = "^0.5.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
